# MFace

./: __init__.py  api_lib.py  bs.py  control.py  core.py  data.py  facs.py  fastPin.py  fits.py  introduction.md  node.py  preset.py  test.py  tools.py  wts.py
data/controls/: circle.json  locator.json  quadrangle.json  tooth.json  triangle.json
plug-ins/: CMakeLists.txt  FunCToPy.h  build.bat
plug-ins/maya2025/: bs_api.pyd
rigs/: __init__.py  brow.py  eye.py  fk.py  joint.py  lip.py  loop.py  nose.py  rig.py  roll.py  surface.py
ui/: __init__.py  base.py  cluster.py  facs.py  fit.py  main.py  preset.py
